--- a/board.html
+++ b/board.html
@@ -68,6 +68,8 @@
 
             display: grid;
             place-items: center;
+
+            z-index: 1; /* appear above FJ background when it appears */
         }
 
         #clueText {
@@ -76,12 +78,23 @@
             width: 50vw;
             text-align: center;
         }
+
+        #fj {
+            /* Final Jeopardy background */
+            background: url("fj.webp");
+            width: 100%;
+            height: 100%;
+
+            position: absolute;
+            z-index: 0;
+            background-size: 100% auto;
+        }
     </style>
 </head>
 
 <body>
     <div id="clue"><p id="clueText">this is a sample clue text</p></div>
-
+    <div id="fj"></div>
     <table id="jeopardy">
 
     </table>
@@ -92,8 +105,8 @@
         function genClueTransform(scaleX, scaleY, translateX, translateY) {
             return `translate(${translateX}px, ${translateY}px) scale(${scaleX}, ${scaleY})`;
         }
-        function animClue(k1, k2, text) {
-            var boundingBox = getClueElement(document.getElementById("jeopardy"), k1, k2).getBoundingClientRect();
+        function animClue(k1, k2, text, boundingBox) {
+            var boundingBox = boundingBox ? boundingBox : getClueElement(document.getElementById("jeopardy"), k1, k2).getBoundingClientRect();
             var clue = document.getElementById("clue");
             document.getElementById("clueText").innerHTML = text;
 
@@ -141,6 +154,15 @@
                 element.innerHTML = "";
             }
         }
+
+        function showFJ() {
+            document.getElementById("fj").style.display = "block";
+        }
+
+        function hideFJ() {
+            document.getElementById("fj").style.display = "none";
+        }
+
         hideClue();
         
 
@@ -150,7 +172,27 @@
         });
 
         socket.on("game", (data) => {
+            hideFJ();
             renderBoard(data, document.getElementById("jeopardy"), false, () => {});
+        });
+
+        socket.on("fjinit", () => {
+            showFJ();
+        });
+
+        socket.on("fjclue", (data) => {
+            animClue(0, 0, data, {
+                width: 0,
+                height: 0,
+                left: window.innerWidth / 2,
+                right: window.innerWidth / 2,
+                top: window.innerHeight / 2,
+                bottom: window.innerHeight / 2
+            });
+        });
+
+        socket.on("finalscores", (data) => {
+            console.log(data);
         });
 
         socket.on("picked", (data) => {
